# img2txt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
project-plan/: DESIGN_PLAN.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md
src/: __init__.py  capture.py  clipboard.py  hotkey.py  main.py  ocr.py  picker.py  preview.py  selector.py  tray.py
tests/: conftest.py  test_capture.py  test_clipboard.py  test_hotkey.py  test_main.py  test_ocr.py  test_tray.py
